@@ -239,16 +239,16 @@ static gchar *soundList[] =
    "sounds/memory/tri.ogg",
    "sounds/chronos/space/1.ogg",
    "sounds/chronos/space/2.ogg",
-   "sounds/chronos/space/2.ogg",
-   "sounds/melody/guitar/melody.ogg",
-   "sounds/melody/guitar/son1.ogg",
-   "sounds/melody/guitar/son2.ogg",
-   "sounds/melody/guitar/son3.ogg",
-   "sounds/melody/guitar/son4.ogg",
-   "sounds/melody/tachos/son1.ogg",
-   "sounds/melody/tachos/son2.ogg",
-   "sounds/melody/tachos/son3.ogg",
-   "sounds/melody/tachos/son4.ogg",
+   "sounds/melody/guitar/melody.wav",
+   "sounds/melody/guitar/son1.wav",
+   "sounds/melody/guitar/son2.wav",
+   "sounds/melody/guitar/son3.wav",
+   "sounds/melody/guitar/son4.wav",
+   "sounds/melody/tachos/melody.wav",
+   "sounds/melody/tachos/son1.wav",
+   "sounds/melody/tachos/son2.wav",
+   "sounds/melody/tachos/son3.wav",
+   "sounds/melody/tachos/son4.wav",
    "sounds/melody/tachos/melody.ogg"
 };
 
